# esp-rustc-abi-bug

./: Cargo.toml  partitions_debug.csv
.cargo/: config.toml
component/: demo.c
src/: main.rs
