[package]
name = "esp-rustc-abi-bug"
version = "0.1.0"
authors = ["Roope Salmi <rpsalmi@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.32.1", default-features = false, features = ["binstart", "panic_handler", "alloc_handler", "native"] }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["component"]

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"
